// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerificationCode renders correctly with default values 1`] = `
<div
  className="sui-box css-8qkufk"
>
  <input
    css={
      Array [
        Object {
          "map": undefined,
          "name": "5tm4hj",
          "next": undefined,
          "styles": "
    border: solid 1px #dce1eb;
    font-size: 24px;
    color: #4a4f62;
    text-align: center;
    border-radius: 4px;
    margin-right: 8px;
    width: 56px;
    height: 64px;

    &:last-child {
      margin-right: 0;
    }

    &::placeholder {
      color: #dce1eb;
    }
  ",
          "toString": [Function],
        },
        "",
      ]
    }
    data-id={0}
    disabled={false}
    id="verification-code-0"
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="[0-9]*"
    placeholder=""
    required={false}
    type="tel"
    value=""
  />
  <input
    css={
      Array [
        Object {
          "map": undefined,
          "name": "5tm4hj",
          "next": undefined,
          "styles": "
    border: solid 1px #dce1eb;
    font-size: 24px;
    color: #4a4f62;
    text-align: center;
    border-radius: 4px;
    margin-right: 8px;
    width: 56px;
    height: 64px;

    &:last-child {
      margin-right: 0;
    }

    &::placeholder {
      color: #dce1eb;
    }
  ",
          "toString": [Function],
        },
        "",
      ]
    }
    data-id={1}
    disabled={false}
    id="verification-code-1"
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="[0-9]*"
    placeholder=""
    required={false}
    type="tel"
    value=""
  />
  <input
    css={
      Array [
        Object {
          "map": undefined,
          "name": "5tm4hj",
          "next": undefined,
          "styles": "
    border: solid 1px #dce1eb;
    font-size: 24px;
    color: #4a4f62;
    text-align: center;
    border-radius: 4px;
    margin-right: 8px;
    width: 56px;
    height: 64px;

    &:last-child {
      margin-right: 0;
    }

    &::placeholder {
      color: #dce1eb;
    }
  ",
          "toString": [Function],
        },
        "",
      ]
    }
    data-id={2}
    disabled={false}
    id="verification-code-2"
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="[0-9]*"
    placeholder=""
    required={false}
    type="tel"
    value=""
  />
  <input
    css={
      Array [
        Object {
          "map": undefined,
          "name": "5tm4hj",
          "next": undefined,
          "styles": "
    border: solid 1px #dce1eb;
    font-size: 24px;
    color: #4a4f62;
    text-align: center;
    border-radius: 4px;
    margin-right: 8px;
    width: 56px;
    height: 64px;

    &:last-child {
      margin-right: 0;
    }

    &::placeholder {
      color: #dce1eb;
    }
  ",
          "toString": [Function],
        },
        "",
      ]
    }
    data-id={3}
    disabled={false}
    id="verification-code-3"
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="[0-9]*"
    placeholder=""
    required={false}
    type="tel"
    value=""
  />
</div>
`;

exports[`VerificationCode renders correctly with initial value and placeholder and 6 fields 1`] = `
<div
  className="sui-box css-8qkufk"
>
  <input
    css={
      Array [
        Object {
          "map": undefined,
          "name": "5tm4hj",
          "next": undefined,
          "styles": "
    border: solid 1px #dce1eb;
    font-size: 24px;
    color: #4a4f62;
    text-align: center;
    border-radius: 4px;
    margin-right: 8px;
    width: 56px;
    height: 64px;

    &:last-child {
      margin-right: 0;
    }

    &::placeholder {
      color: #dce1eb;
    }
  ",
          "toString": [Function],
        },
        "",
      ]
    }
    data-id={0}
    disabled={false}
    id="verification-code-0"
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="[0-9]*"
    placeholder="0"
    required={false}
    type="tel"
    value="1"
  />
  <input
    css={
      Array [
        Object {
          "map": undefined,
          "name": "5tm4hj",
          "next": undefined,
          "styles": "
    border: solid 1px #dce1eb;
    font-size: 24px;
    color: #4a4f62;
    text-align: center;
    border-radius: 4px;
    margin-right: 8px;
    width: 56px;
    height: 64px;

    &:last-child {
      margin-right: 0;
    }

    &::placeholder {
      color: #dce1eb;
    }
  ",
          "toString": [Function],
        },
        "",
      ]
    }
    data-id={1}
    disabled={false}
    id="verification-code-1"
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="[0-9]*"
    placeholder="0"
    required={false}
    type="tel"
    value="3"
  />
  <input
    css={
      Array [
        Object {
          "map": undefined,
          "name": "5tm4hj",
          "next": undefined,
          "styles": "
    border: solid 1px #dce1eb;
    font-size: 24px;
    color: #4a4f62;
    text-align: center;
    border-radius: 4px;
    margin-right: 8px;
    width: 56px;
    height: 64px;

    &:last-child {
      margin-right: 0;
    }

    &::placeholder {
      color: #dce1eb;
    }
  ",
          "toString": [Function],
        },
        "",
      ]
    }
    data-id={2}
    disabled={false}
    id="verification-code-2"
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="[0-9]*"
    placeholder="3"
    required={false}
    type="tel"
    value=""
  />
  <input
    css={
      Array [
        Object {
          "map": undefined,
          "name": "5tm4hj",
          "next": undefined,
          "styles": "
    border: solid 1px #dce1eb;
    font-size: 24px;
    color: #4a4f62;
    text-align: center;
    border-radius: 4px;
    margin-right: 8px;
    width: 56px;
    height: 64px;

    &:last-child {
      margin-right: 0;
    }

    &::placeholder {
      color: #dce1eb;
    }
  ",
          "toString": [Function],
        },
        "",
      ]
    }
    data-id={3}
    disabled={false}
    id="verification-code-3"
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="[0-9]*"
    placeholder="7"
    required={false}
    type="tel"
    value=""
  />
  <input
    css={
      Array [
        Object {
          "map": undefined,
          "name": "5tm4hj",
          "next": undefined,
          "styles": "
    border: solid 1px #dce1eb;
    font-size: 24px;
    color: #4a4f62;
    text-align: center;
    border-radius: 4px;
    margin-right: 8px;
    width: 56px;
    height: 64px;

    &:last-child {
      margin-right: 0;
    }

    &::placeholder {
      color: #dce1eb;
    }
  ",
          "toString": [Function],
        },
        "",
      ]
    }
    data-id={4}
    disabled={false}
    id="verification-code-4"
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="[0-9]*"
    placeholder=""
    required={false}
    type="tel"
    value=""
  />
  <input
    css={
      Array [
        Object {
          "map": undefined,
          "name": "5tm4hj",
          "next": undefined,
          "styles": "
    border: solid 1px #dce1eb;
    font-size: 24px;
    color: #4a4f62;
    text-align: center;
    border-radius: 4px;
    margin-right: 8px;
    width: 56px;
    height: 64px;

    &:last-child {
      margin-right: 0;
    }

    &::placeholder {
      color: #dce1eb;
    }
  ",
          "toString": [Function],
        },
        "",
      ]
    }
    data-id={5}
    disabled={false}
    id="verification-code-5"
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="[0-9]*"
    placeholder=""
    required={false}
    type="tel"
    value=""
  />
</div>
`;
